--- a/Cafe_Ratings.ipynb
+++ b/Cafe_Ratings.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 18,
    "id": "be17f21a-0918-4295-853e-cc634f0ab2ff",
    "metadata": {},
    "outputs": [
@@ -10,117 +10,25 @@
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      "Enter Restaurant Name Crush Coffee\n"
+      "Enter Restaurant Name Hello\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Similar Restaurants are also available \n"
+      "Enter Correct Restaurant Name .\n",
+      "\n",
+      "\n"
      ]
     },
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Name</th>\n",
-       "      <th>Ratings</th>\n",
-       "      <th>Cusines</th>\n",
-       "      <th>Reviews</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Crush Coffee</td>\n",
-       "      <td>3</td>\n",
-       "      <td>Cafe, Shake, Beverages, Desserts</td>\n",
-       "      <td>Very watery ans thin shake</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Fyro</td>\n",
-       "      <td>3</td>\n",
-       "      <td>Cafe, Coffee, Shake, Beverages</td>\n",
-       "      <td>Worst service, the staff doesn’t hear your ord...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Oven The Bakery &amp; Cafe</td>\n",
-       "      <td>3.4</td>\n",
-       "      <td>Cafe, Bakery, Waffle, Desserts, Beverages</td>\n",
-       "      <td>Extreme oily,  Veg puff was not at all fresh.</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>Brewer Cafe &amp; Restro</td>\n",
-       "      <td>3.1</td>\n",
-       "      <td>Cafe, Pizza, Burger, Sandwich, Fast Food, Dess...</td>\n",
-       "      <td>due to unavailability my order was replaced to...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>Cafe Catchers</td>\n",
-       "      <td>3.3</td>\n",
-       "      <td>Cafe, Shake, Beverages, Chinese, Italian, Mexi...</td>\n",
-       "      <td>Won’t order from here again . Regret</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12</th>\n",
-       "      <td>Shambhu's Coffee Bar</td>\n",
-       "      <td>3.3</td>\n",
-       "      <td>Cafe, Shake, Beverages, Sandwich, Pizza, Fast ...</td>\n",
-       "      <td>I went here for the second time with my husban...</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "                      Name Ratings  \\\n",
-       "0             Crush Coffee       3   \n",
-       "1                     Fyro       3   \n",
-       "2   Oven The Bakery & Cafe     3.4   \n",
-       "5     Brewer Cafe & Restro     3.1   \n",
-       "8            Cafe Catchers     3.3   \n",
-       "12    Shambhu's Coffee Bar     3.3   \n",
-       "\n",
-       "                                              Cusines  \\\n",
-       "0                    Cafe, Shake, Beverages, Desserts   \n",
-       "1                      Cafe, Coffee, Shake, Beverages   \n",
-       "2           Cafe, Bakery, Waffle, Desserts, Beverages   \n",
-       "5   Cafe, Pizza, Burger, Sandwich, Fast Food, Dess...   \n",
-       "8   Cafe, Shake, Beverages, Chinese, Italian, Mexi...   \n",
-       "12  Cafe, Shake, Beverages, Sandwich, Pizza, Fast ...   \n",
-       "\n",
-       "                                              Reviews  \n",
-       "0                          Very watery ans thin shake  \n",
-       "1   Worst service, the staff doesn’t hear your ord...  \n",
-       "2       Extreme oily,  Veg puff was not at all fresh.  \n",
-       "5   due to unavailability my order was replaced to...  \n",
-       "8                Won’t order from here again . Regret  \n",
-       "12  I went here for the second time with my husban...  "
+       "'No Similar Restaurants Found!'"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -147,16 +55,18 @@
     "arr=ind.tolist()\n",
     "new_city=''\n",
     "new_rating = 0.0;\n",
-    "\n",
+    "is_present=True;\n",
     "if(len(arr)==0):\n",
-    "    print(\"Enter Correct Restaurant Name\")\n",
+    "    is_present=False;\n",
+    "    print(\"Enter Correct Restaurant Name .\")\n",
     "\n",
     "else:\n",
+    "    print(\"The Reviews of \"+Restaurant+\" are :\")\n",
     "    for i in arr:\n",
     "        prediction = model.predict([[i]])\n",
     "        new_city=prediction[0][1]\n",
     "        new_rating=prediction[0][0]\n",
-    "        # print(prediction)\n",
+    "        print(\"➤\"+prediction[0][2])\n",
     "\n",
     "\n",
     "# print(city)\n",
@@ -183,8 +93,8 @@
     "    except ValueError:\n",
     "        return False\n",
     "\n",
+    "print(\"\\n\")\n",
     "\n",
-    "print(\"Similar Restaurants are also available \")\n",
     "arr1=index1.tolist()\n",
     "dict = {\n",
     "\t'Name': [],\n",
@@ -192,26 +102,30 @@
     "\t'Cusines': [],\n",
     "    'Reviews':[]\n",
     "};\n",
-    "\n",
-    "for i in arr1:\n",
-    "     predictions = model.predict([[i]])\n",
-    "     if(is_float(predictions[0][1]) and float(predictions[0][1])>low and float(predictions[0][1])<high):\n",
-    "         dict['Name'].append(predictions[0][0]);\n",
-    "         dict['Ratings'].append(predictions[0][1]);\n",
-    "         dict['Cusines'].append(predictions[0][2]);\n",
-    "         dict['Reviews'].append(predictions[0][4]);\n",
+    "if(is_present):\n",
+    "    print(\"Similar Restaurants are also available : \")\n",
+    "    for i in arr1:\n",
+    "        predictions = model.predict([[i]])\n",
+    "        if(is_float(predictions[0][1]) and float(predictions[0][1])>low and float(predictions[0][1])<high):\n",
+    "            dict['Name'].append(predictions[0][0]);\n",
+    "            dict['Ratings'].append(predictions[0][1]);\n",
+    "            dict['Cusines'].append(predictions[0][2]);\n",
+    "            dict['Reviews'].append(predictions[0][4]);\n",
+    "             \n",
     "         # print(predictions)\n",
     "\n",
+    "New_Transformed = \"No Similar Restaurants Found!\"\n",
+    "if(is_present):\n",
+    "    Transformed=pd.DataFrame(dict)\n",
+    "    New_Transformed=Transformed.drop_duplicates(subset=\"Name\")\n",
     "\n",
-    "Transformed=pd.DataFrame(dict)\n",
-    "New_Transformed=Transformed.drop_duplicates(subset=\"Name\")\n",
     "New_Transformed"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0ada55f1-e204-4a36-826d-1334a5fa3740",
+   "id": "fe0c418a-84c4-4a1c-b779-9d1c05498ae4",
    "metadata": {},
    "outputs": [],
    "source": []
